--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -68,7 +68,7 @@ Senast uppdaterad: `r Sys.Date()`</i>
 # Sammanfattning {-}
 <ul>
 
-<li>De senaste decenniernas invandring har motverkat en markant minskning invånarantalet i länet och bidragit till att föryngra befolkningen </li>
+<li>De senaste decenniernas invandring har bidragit till att motverka det sjunkande invånarantalet i länet och till att föryngra befolkningen </li>
 
 <li>Utvecklingen inom utbildnings- och arbetsmarknadsområdet är positiv över tid för utrikes födda </li>
 
@@ -81,9 +81,11 @@ Senast uppdaterad: `r Sys.Date()`</i>
 </ul>
 
 # Inledning {-}
-I år är det 10 år sedan Sverige registrerade det högsta antalet asylsökande genom tiderna. 2015 sökte närmare 163 000 personer asyl i Sverige och för Dalarnas del blev 2016 det år då invandringen var som störst efter att de asylsökande fått uppehållstillstånd och folkbokförts i länet. I november 2015 uttryckte även regeringen att trycket var stort på det svenska samhället och att Sverige behövde "ett andrum för svenskt flyktingmottagande". I och med det skärptes migrationspolitiken, men att det stora mottagandet skulle "vara en stolthet för oss när historien skrivs" [(Sveriges Radio, 2015)](https://www.sverigesradio.se/artikel/6310364){target="_blank"}^[Sveriges Radio, 2015. Regeringens besked om skärpt flyktingpolitik, 2015-11-25.]. [Riksrevisionen (2017)](https://www.riksdagen.se/sv/dokument-och-lagar/dokument/riksrevisionens-granskningsrapport/lardomar-av-flyktingsituationen-hosten-2015-_h5b54/){target="_blank"}^[Riksrevisionen, 2017. Granskningsrapport 2017:4, Lärdomar av flyktingsituationen hösten 2015 - beredskap och hantering.] granskade de centrala offentliga aktörernas beredskap och noterar att det brast i vissa avseenden, men att huvuduppdraget ändå kunde genomföras. 
+I år är det 10 år sedan året då Sverige registrerade det högsta antalet asylsökande genom tiderna. 2015 sökte närmare 163 000 personer asyl i Sverige och för Dalarnas del blev 2016 det år då invandringen var som störst efter att de asylsökande fått uppehållstillstånd och folkbokförts i länet. 
 
-2019 publicerade Region Dalarna rapporten [*Nulägesbeskrivning av integrationen i Dalarna, ett regionalt perspektiv*](https://www.regiondalarna.se/contentassets/d845727dbc9f49c3b7b09a2c60456497/integrationsanalys.pdf){target="_blank"}.^[Region Dalarna, 2019. Nulägesbeskrivning av integrationen i Dalarna, ett regionalt perspektiv. Regionala utvecklingsförvaltningens rapportserie #1.] Rapporten skrevs i anslutning till och med anledning av den höga asylinvandringen till Sverige och Dalarna. Därefter har asylinvandringen minskat och 2024 var den på en nivå som är den lägsta sedan 1985, vilket är en del i ett paradigmskifte från sittande regering att öka arbetskraftsinvandringen och minska asylinvandringen [(Regeringen, 2025)](https://www.regeringen.se/pressmeddelanden/2025/01/pressbriefing-om-migrationen-till-sverige-under-2024/){target="_blank"}.^[Regeringen. Pressbriefing om migrationen till Sverige under 2024. 2025-01-10.]
+I november 2015 uttryckte regeringen att trycket var stort på det svenska samhället och att Sverige behövde "ett andrum för svenskt flyktingmottagande". I och med det skärptes migrationspolitiken. Regeringen var trots det tydlig med att det stora mottagandet skulle "vara en stolthet för oss när historien skrivs" [(Sveriges Radio, 2015)](https://www.sverigesradio.se/artikel/6310364){target="_blank"}^[Sveriges Radio, 2015. Regeringens besked om skärpt flyktingpolitik, 2015-11-25.]. [Riksrevisionen (2017)](https://www.riksdagen.se/sv/dokument-och-lagar/dokument/riksrevisionens-granskningsrapport/lardomar-av-flyktingsituationen-hosten-2015-_h5b54/){target="_blank"}^[Riksrevisionen, 2017. Granskningsrapport 2017:4, Lärdomar av flyktingsituationen hösten 2015 - beredskap och hantering.] granskade de centrala offentliga aktörernas beredskap och noterade att det brast i vissa avseenden, men att huvuduppdraget ändå kunde genomföras. 
+
+År 2019 publicerade Region Dalarna rapporten [*Nulägesbeskrivning av integrationen i Dalarna, ett regionalt perspektiv*](https://www.regiondalarna.se/contentassets/d845727dbc9f49c3b7b09a2c60456497/integrationsanalys.pdf){target="_blank"}.^[Region Dalarna, 2019. Nulägesbeskrivning av integrationen i Dalarna, ett regionalt perspektiv. Regionala utvecklingsförvaltningens rapportserie #1.] Rapporten skrevs med syfte att följa upp hur den höga asylinvandringen till Sverige och Dalarna påverkat länet. År 2016 registrerades cirka 30 000 asylsökande och fram till pandemin registrerades mellan 20-30 000 årligen. År 2024 hade asylinvandringen minskat till cirka 10 000, en nivå som är den lägsta sedan 1996, och en del i det paradigmskifte som nuvarande regering verkar för, med ambitioner att öka arbetskraftsinvandringen och minska asylinvandringen [(Regeringen, 2025)](https://www.regeringen.se/pressmeddelanden/2025/01/pressbriefing-om-migrationen-till-sverige-under-2024/){target="_blank"}.^[Regeringen. Pressbriefing om migrationen till Sverige under 2024. 2025-01-10.]
 
 Integration kan ses som *en process där individer eller grupper med olika bakgrunder och förutsättningar blir en del av ett större socialt, ekonomiskt eller kulturellt sammanhang, samtidigt som deras egen identitet och särart respekteras*. 
 
@@ -107,27 +109,26 @@ Beroende på sammanhang kan integration ha olika betydelser:
 
 [Amnå och Stigendal (2021)](https://mau.diva-portal.org/smash/get/diva2:1599404/FULLTEXT01.pdf){target="_blank"}^[Amnå, E. och Stigendal, M., 2021. Samhällsorientering: för en hållbar integration. Komlitt AB, Helsingborg.] betonar vikten av att vara tydlig vid användningen av begrepp kopplade till integration och hänvisar till Nationalencyklopedins definition - *integration är en process som leder till att skilda enheter förenas, men det kan även gälla resultatet av en sådan process* - och sociologins användning av begreppen strukturell och kulturell integration.
 
-Den strukturella integrationen handlar om skyldigheter och rättigheter via samhälleliga system, lagar och regler. Den kulturella integrationen handlar mer om hur människor upplever sig som integrerade via normer, värderingar och identiteter. En känsla av delaktighet skapar kulturell integration medan en lag skapar strukturell integration. I grunden handlar det här om alla individer som lever i ett land, även om den vardagliga diskussionen i mångt och mycket handlar om invandrare i förhållande till de som är födda och uppväxta i ett land.
+Den strukturella integrationen handlar om skyldigheter och rättigheter via samhälleliga system, lagar och regler. Den kulturella integrationen handlar mer om hur människor upplever sig som integrerade via normer, värderingar och identiteter. En känsla av delaktighet skapar kulturell integration medan en lag skapar strukturell integration. I grunden handlar det här om alla individer som lever i ett land, även om den vardagliga diskussionen i mångt och mycket handlar om invandrade i förhållande till de som är födda och uppväxta i ett land.
 
 </div>
  
 </details>
 
-Även om integrationsbegreppet är brett, präglas samhällsdebatten av integration av utrikes födda i det svenska samhället. Det gör att det är viktigt att belysa hur utrikes födda förhåller sig till inrikes födda inom ett antal samhällsområden. Samhällets förmåga att intregrera utrikes födda i utbildning, arbetsmarknad eller boende är avgörande för exempelvis kompetensförsörjningen på kort och lång sikt. 
+Även om integrationsbegreppet är brett, präglas samhällsdebatten av hur utrikes födda ska integreras i det svenska samhället. Det gör att det är viktigt att belysa hur utrikes födda förhåller sig till inrikes födda inom ett antal samhällsområden. Samhällets förmåga att intregrera utrikes födda i utbildning, arbetsmarknad eller boende är avgörande för exempelvis kompetensförsörjningen på kort och lång sikt. 
 
 Den här rapportens syfte är att redovisa aktuell statistik relaterat till utrikes föddas integration i samhället i Dalarna och visa på utvecklingen över tid. Som utgångspunkt finns 2019 års rapport, men en anpassning till dagens situation och kunskap görs i stor utsträckning. Rapporten kommer inte att behandla frågor som rör invandringens påverkan på de offentliga finanserna eller utrikes föddas inblandning i brottslighet. För den som är intresserad av att läsa mer om dessa områden rekommenderas rapporter från [Konjunkturinstitutet](https://www.konj.se/media/kpgnt5iw/specialstudie-117-invandrades-nettobidrag-till-de-offentliga-finanserna-1983-2022.pdf){target="_blank"} och [Brottsförebyggande rådet](https://bra.se/rapporter/arkiv/2021-08-25-misstankta-for-brott-bland-personer-med-inrikes-respektive-utrikes-bakgrund){target="_blank"}.
 
-I rapporten från 2019 konstaterades bland annat att det var en tydlig skiljelinje i integrationen mellan utrikes födda å ena sidan och inrikes födda med utrikes födda föräldrar respektive inrikes födda med inrikes födda föräldrar å andra sidan. Skillnaden mellan de inrikes födda, oavsett om de hade inrikes eller utrikes födda föräldrar, var relativt liten när det gäller skolresultat och sysselsättningsgrad. Distinktionen i denna rapport är därför primärt mellan utrikes födda och inrikes födda. En uppdelning sker även för kvinnor och män i de delar det är relevant, utbildningsnivåer samt vistelsetid i landet för de som är utrikes födda. I vissa diagram används även begreppet *Född i Sverige*, vilket ska likställas med inrikes född.
+I rapporten från 2019 konstaterades bland annat att det fanns en tydlig skiljelinje mellan hur väl integrationsprocessen fungerar för gruppen utrikes födda å ena sidan, och inrikes födda med utrikes födda föräldrar respektive inrikes födda med inrikes födda föräldrar å andra sidan. Skillnaden i förutsättningar och förmåga mellan de inrikes födda, oavsett om de hade inrikes eller utrikes födda föräldrar, var relativt liten när det gäller skolresultat och sysselsättningsgrad. Distinktionen i denna rapport belyser därför primärt utrikes födda i jämförelse med inrikes födda. En uppdelning sker även för kvinnor och män i de delar det är relevant, som exempelvis utbildningsnivåer samt vistelsetid i landet. I vissa diagram används även begreppet *Född i Sverige*, vilket ska likställas med inrikes född.
 
-# Demografi och invandring
-Sverige är sedan en längre tid inne i en demografisk fas där de stora babyboom-kullarna från slutet av 1940-
-och början av 1950-talet uppnåt pensionsålder och nästa generation från 1960-talet börjar närma sig pension. Många svenska kommuner har en alltmer ålderstigen befolkning, en effekt av den urbaniseringsvåg som pågått sedan tidigt 1900-tal, då många unga lämnat landsbygden och mindre tätorter till förmån för residens- och universitetsstäder. Förutom att den demografiska situationen medför färre skattebetalare som ska försörja allt fler äldre så innebär den också ett stort kompetensförsörjningsproblem.
+# Befolkningsutvecklingen och invandring
+Sverige är sedan en längre tid inne i en demografisk fas där de stora babyboom-kullarna från slutet av 1940- och början av 1950-talet uppnåt pensionsålder och nästa generation från 1960-talet börjar närma sig pension. Många svenska kommuner har en alltmer ålderstigen befolkning, en effekt av den urbaniseringsvåg som pågått sedan tidigt 1900-tal, då många unga lämnat landsbygden och mindre tätorter till förmån för residens- och universitetsstäder. Förutom att befolkningsutvecklingen medför färre skattebetalare som ska försörja allt fler äldre så innebär den också ett stort kompetensförsörjningsproblem.
 
-En stor andel äldre i befolkningen medför ekonomiska påfrestningar för dessa kommuner då allt färre i arbetsför ålder ska försörja allt fler äldre och barn. Redan i [Långtidsutredningen (2015)](https://www.regeringen.se/contentassets/86d73b72a97345feb2a8cbc8b6700fa7/sou-2015104-langtidsutredningen-2015-huvudbetankande/){target="_blank"}^[Regeringen, 2015. Långtidsutredningen 2015, Statens Offentliga Utredningar 2015:104.] gjordes beräkningar på hur mycket kommunalskatten skulle behöva höjas i kommunerna för att upprätthålla samma servicenivå år 2040 som då, som en följd av den förändrade demografiska strukturen. Beräkningarna visade på orimliga skattehöjningar, cirka 50-procentiga ökningar, vilket kan ses som en signal på hur allvarlig situationen var redan för tio år sedan.  
+En stor andel äldre i befolkningen medför ekonomiska påfrestningar för en kommun då allt färre i arbetsför ålder ska försörja dem som inte förvärvsarbetar, det vill säga äldre och barn. Redan i [Långtidsutredningen (2015)](https://www.regeringen.se/contentassets/86d73b72a97345feb2a8cbc8b6700fa7/sou-2015104-langtidsutredningen-2015-huvudbetankande/){target="_blank"}^[Regeringen, 2015. Långtidsutredningen 2015, Statens Offentliga Utredningar 2015:104.] gjordes beräkningar på hur mycket kommunalskatten skulle behöva höjas i kommunerna för att upprätthålla samma servicenivå år 2040 som då, som en följd av den förändrade demografiska strukturen. Beräkningarna visade på cirka 50-procentiga ökningar, i mångas ögon orimliga skattehöjningar, vilket kan ses som en signal på hur allvarlig situationen var redan för tio år sedan.  
 
-I [Långtidsutredningen (2019)](https://www.regeringen.se/contentassets/ec035a7de89549eaacc14d82f54b4396/sou-2019_65_webb.pdf){target="_blank"}^[Regeringen, 2019. Långtidsutredningen 2019, Statens Offentliga Utredningar 2019:65.] beräknas statsbidragen till kommunsektorn, vid oförändrade kommunalskatter, behöva nästan dubbleras fram till 2035 för att möta den demografiskt betingade efterfrågan på kommunala tjänster. Utmaningen ligger dock inte främst i finansieringen, utan i att hitta arbetskraften. De största personalbristerna förväntas i landsbygdsregioner, med risk för ojämlikhet i levnadsförhållanden och utvecklingsmöjligheter.
+I [Långtidsutredningen (2019)](https://www.regeringen.se/contentassets/ec035a7de89549eaacc14d82f54b4396/sou-2019_65_webb.pdf){target="_blank"}^[Regeringen, 2019. Långtidsutredningen 2019, Statens Offentliga Utredningar 2019:65.] beräknas statsbidragen till kommunsektorn, vid oförändrade kommunalskatter, behöva nästan fördubblas fram till 2035 för att möta den demografiskt betingade efterfrågan på kommunala tjänster. Utmaningen ligger dock inte främst i finansieringen, utan i att hitta arbetskraften. Störst brist på personal förväntas uppstå i landsbygdsregioner, vilket riskerar att leda till ökad ojämlikhet i levnadsförhållanden och utvecklingsmöjligheter.
 
-Andelen utrikes födda som är i arbetsför ålder (20-64 år) i Dalarna har ökat successivt över de senaste 20 åren, från `r andel_utrikes_min_ar` procent år `r andel_utrikes_inrikes_min_ar` till `r andel_utrikes_max_ar` procent år `r andel_utrikes_inrikes_max_ar`. Ökningen var särskilt tydlig under några år på mitten av 2010-talet, i samband med den stora flyktingströmmen och invandringen till Sverige och Dalarna. Utrikes födda är därför en förutsättning för att kunna kompetensförsörja arbetsmarknaden. 
+Andelen utrikes födda som är i arbetsför ålder (20-64 år) i Dalarna har ökat successivt över de senaste 20 åren, från `r andel_utrikes_min_ar` procent år `r andel_utrikes_inrikes_min_ar` till `r andel_utrikes_max_ar` procent år `r andel_utrikes_inrikes_max_ar`. Ökningen var särskilt tydlig under några år på mitten av 2010-talet i samband med den stora flyktingströmmen och invandringen till Sverige och Dalarna. Utrikes födda har blivit en förutsättning för att kunna kompetensförsörja arbetsmarknaden i Dalarna. 
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 gg_andel_utrikes_inrikes$befolkning_utr_inr_andel_Dalarna
@@ -151,9 +152,8 @@ För en fördjupad beskrivning av den utrikes födda befolkningens utveckling i 
 
 Den första större invandring som påverkat Dalarna i modern tid var den arbetskraftsinvandring som skedde efter andra världskriget. Denna epok varade i stort sett under två decennier, d.v.s. under 1950- och 1960-talet.
 
-Den svenska ekonomin expanderade snabbt efter kriget, vilket gjorde att efterfrågan på arbetskraft utifrån var stor. Bristen berodde även på att ålderskullarna födda på 1920- och 30-talet var små. Efter andra världskriget och fram till 1970-talet låg arbetskraftsinvandringen i hela Sverige på en förhållandevis hög nivå. Arbetskraftsinvandrarna
-kom främst från Norden, men även från övriga Europa. En överenskommelse om en gemensam nordisk arbetsmarknad år 1954, innebar att framför allt många finländare invandrade under 1960- och 70-talet då det var lågkonjunktur i Finland. I Dalarnas län bosatte sig dessa främst i kommuner där det fanns stor tillverkningsindustri som Gagnef, Borlänge, Avesta
-och Ludvika. En mycket liten andel av invandringen under denna tid kom från andra världsdelar. I slutet av 1970-talet upphörde i princip all arbetskraftsinvandring för en tid.
+Den svenska ekonomin expanderade snabbt efter kriget, vilket gjorde att efterfrågan på arbetskraft var större än tillgången i landet. Bristen berodde även på att ålderskullarna födda på 1920- och 30-talet var relativt små. Arbetskraftsinvandrarna kom främst från Norden, men även från övriga Europa. En överenskommelse om en gemensam nordisk arbetsmarknad år 1954, innebar att framför allt många finländare invandrade under 1960- och 70-talet, då det även var lågkonjunktur i Finland. I Dalarnas län bosatte sig dessa främst i kommuner där det fanns stor tillverkningsindustri som Gagnef, Borlänge, Avesta
+och Ludvika. En mycket liten andel av invandringen under denna tid kom från andra världsdelar. Efter andra världskriget och fram till 1970-talet låg arbetskraftsinvandringen i hela Sverige på en förhållandevis hög nivå, men i slutet av 1970-talet upphörde i princip all arbetskraftsinvandring för en tid. 
 
 I mitten av 1980-talet växte ny typ av immigration fram i Sverige. Tidigare hade de invandrare som sökt sig till Sverige av flyktingskäl främst gjort det under enstaka katastrofer. Detta scenario förändrades efter år 1984 i takt med den växande globaliseringen och politiska krav på att den rika världen bör ta sitt ansvar och acceptera flyktingar från Asien, Afrika och Mellanöstern. Sverige var ett av de länder som till en början framträdde med en jämförelsevis generös flyktingpolitik. År 1987–90 togs omkring 20 000 flyktingar emot årligen i Sverige. Detta gjorde att antalet immigranter i Dalarna ökade under tidsperioden.
 
